# rs-droneapp

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  setup.sh  skills-lock.json
.agents/skills/skill-creator/: LICENSE.txt
.specify/: feature.json  init-options.json  state_new-feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  Dockerfile  __init__.py  requirements.txt
backend/agents/: base.py  planner.py  specialized.py  specifier.py  tools.py
backend/core/: settings.py  urls.py
backend/drone_delivery/: apps.py  models.py  serializers.py  urls.py  views.py
backend/orchestrator/: cli.py  engine.py  state.py  workflow.py
db/: init-spatial.sql
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  test_output.txt  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: test_agent_tools.py
specs/001-drone-delivery-run/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-drone-operator-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-unified-docker-compose/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sdlc-agents-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+23 files in other folders)
